--- a/package.json
+++ b/package.json
@@ -6,13 +6,18 @@
   "scripts": {
     "build": "webpack --mode=production",
     "start": "webpack-dev-server",
-    "test": "jest"
+    "test": "jest --color",
+    "lint": "eslint src --ext .ts --color"
   },
   "keywords": [],
   "author": "Rene Hangstrup Møller",
   "license": "MIT",
   "devDependencies": {
     "@types/jest": "^26.0.9",
+    "@typescript-eslint/eslint-plugin": "^3.9.0",
+    "@typescript-eslint/parser": "^3.9.0",
+    "eslint": "^7.6.0",
+    "eslint-config-prettier": "^6.11.0",
     "html-webpack-plugin": "^4.3.0",
     "jest": "^26.3.0",
     "prettier": "^2.0.5",
