feat: procedural geometry and proof of concept for manipulating rays

--- a/.eslintrc
+++ b/.eslintrc
@@ -14,5 +14,8 @@
   ],
   "parserOptions": {
     "ecmaVersion": 2015
+  },
+  "rules": {
+    "@typescript-eslint/explicit-module-boundary-types": false
   }
 }
